@@ -29,6 +29,8 @@ For 5.1
     TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data
     TODO: Fix status menu output issue
 
+    TODO: Get rid of "Secure bundled script option", which is useless bullshit anyway
+
     * Bundled files table view now uses combined image and text cell instead of two columns
     * Renamed Advanced menu to Action
     * Fixed issue where main application window would not remember its last position
